catalog/elk/kubernetes/kopf/kopf-service.minikube.yaml
apiVersion: v1
kind: Service
metadata:
  name: kopf
  labels:
    app: elk
    component: kopf
    role: management
    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
    environment: dev     # dev, staging, qa, production
    partition: all       # customer_1, customer_2, developer_1, beta_release
spec:
  selector:
    app: elk
    component: kopf
  ports:
  - port: 8080
    name: http
    protocol: TCP
